test/expected/declare_exsti.out
declare x as exported static int x
        ^
9: error: "export static int" is illegal for built-in type
